--- a/order/templates/Shopcart_products.html
+++ b/order/templates/Shopcart_products.html
@@ -76,12 +76,9 @@
                             <div class="row">
                                 <div class="col-12">
                                     <div class="coupon-all">
-                                        <div class="coupon">
-                                            <input id="coupon_code" class="input-text" name="coupon_code" value="" placeholder="Coupon code" type="text">
-                                            <input class="button" name="apply_coupon" value="Apply coupon" type="submit">
-                                        </div>
+
                                         <div class="coupon2">
-                                            <input class="button" name="update_cart" value="Update cart" type="submit">
+                                            <input class="button" formaction="/shopcart/" name="update_cart" value="Sepeti Yenile" type="submit">
                                         </div>
                                     </div>
                                 </div>
@@ -94,7 +91,7 @@
                                             <li>Ara Toplam <span>${{ total }}</span></li>
                                             <li>TOPLAM <span>${{ total }}</span></li>
                                         </ul>
-                                        <a href="javascript:void(0)">Proceed to checkout</a>
+                                        <a href="/order/orderproduct" >SİPARİŞ VER</a>
                                     </div>
                                 </div>
                             </div>
