Kullanıcı Siparişlerini görüntüleyebiliyor.

--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -95,7 +95,7 @@
                                              {% csrf_token %}
 
                                         <li><a href="/user">Hesabım</a></li>
-                                        <li><a href="#">Sepetim</a></li>
+                                        <li><a href="/shopcart/">Sepetim</a></li>
                                         <li><a href="/logout/">Çıkış Yap</a></li>
                                          {% else %}
                                         <li><a href="/login/">Giriş Yap</a></li>
