--- a/user/templates/change_password.html
+++ b/user/templates/change_password.html
@@ -33,7 +33,7 @@
                         <div class="col-lg-3">
                             <ul class="nav myaccount-tab-trigger" id="account-page-tab" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="account-dashboard-tab" data-toggle="tab" href="#account-dashboard" role="tab" aria-controls="account-dashboard" aria-selected="true">HESAP AYARI</a>
+                                    <a class="nav-link active" id="account-dashboard-tab" data-toggle="tab" href="#account-dashboard" role="tab" aria-controls="account-dashboard" aria-selected="true">ŞİFRE AYARI</a>
                                 </li>
                             </ul>
                         </div>
@@ -43,20 +43,42 @@
                                         <div class="author-avatar">
                                             <img style="height: 100px ; width: 100px ; margin-top: -30px" src="{{ user.userprofile.image.url }}" alt="User">
                                              <h5 class="comment-author">{{profile.user_name}}</h5>
-
-                                            <p>Buradan profilinle ilgili tüm bilgilere ulaşabilir ve kontrol edebilirsin!</p>
-
+                                                 {% if messages %}
+                                       {% for message in messages %}
+                                           <div class="alert alert-{{ message.tags }}" role="alert"> {{ message }} </div>
+                                       {% endfor %}
+                                    {% endif %}
+                                            <p>Buradan Şifreniz ilgili bilgilere ulaşabilir ve kontrol edebilirsin!</p>
                                         </div><br>
 
                                              <div class="uren-form-inner">
 
 
-                                             <form method="POST" enctype="multipart/form-data" class="uren-form"> {% csrf_token %}
+                                             <form method="POST"  class="uren-form"> {% csrf_token %}
                                             <div class="uren-form-inner">
 
                                                 <div class="single-input single-input-half">
-                                                    {{ user_form.as_p }}
-                                                    {{ profile_form.as_p }}
+
+                                                    {% for field in form %}
+
+                                                        <p>
+                                                            {{ field.label_tag }} <br>
+                                                            {{ field }}
+                                                            {% if field.help_text %}
+                                                                <small style="color:grey">{{ field.help_text }}</small>
+                                                            {% endif %}
+
+                                                            {% for error in field.errors %}
+                                                                <p> {{ error }} <p>
+                                                            {% endfor %}
+
+                                                           </p>
+
+                                                    {% endfor %}
+
+
+
+
                                                     <button class="uren-btn uren-btn_dark" type="submit"><span>KAYDET</span></button>
                                                 </div>
 
