--- a/home/templates/arabalar.html
+++ b/home/templates/arabalar.html
@@ -12,15 +12,15 @@
 {% block content %}
 
  <!-- Breadcrumb Section Begin -->
-    <div class="breadcrumb-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb-text">
-                        <h2>ARABALAR</h2>
+    <div class="breadcrumb-section"style="background-image: url({% static 'img/1.jpg'%});">
+        <div class="container" >
+            <div class="row" >
+                <div class="col-lg-12" >
+                    <div class="breadcrumb-text" >
+                        <h2 style="color: #FFFFFF">ARABALAR</h2>
                         <div class="bt-option">
-                            <a href="./home.html">ANASAYFA</a>
-                            <span>{{ categorydata.title }}</span>
+                            <a href="./home.html" style="color: #FFFFFF">ANASAYFA</a>
+                            <span style="color: #FFFFFF">{{ categorydata.title }}</span>
                         </div>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
 
 
     <!-- Rooms Section Begin -->
-    <section class="rooms-section spad">
+    <section class="rooms-section spad" style="padding-top: 50px">
         <div class="container">
             <div class="row">
                 {% for rs in cars %}
