--- a/user/templates/user_orders.html
+++ b/user/templates/user_orders.html
@@ -33,10 +33,7 @@
                         <div class="col-lg-3">
                             <ul class="nav myaccount-tab-trigger" id="account-page-tab" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="account-dashboard-tab" data-toggle="tab" href="#account-dashboard" role="tab" aria-controls="account-dashboard" aria-selected="true">HESABIM</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" id="account-orders-tab" data-toggle="tab" href="#account-orders" role="tab" aria-controls="account-orders" aria-selected="false">ŞİPARİŞLER</a>
+                                    <a class="nav-link active" id="account-orders-tab" data-toggle="tab" href="#account-orders" role="tab" aria-controls="account-orders" aria-selected="true">ŞİPARİŞLER</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" id="account-address-tab" data-toggle="tab" href="#account-address" role="tab" aria-controls="account-address" aria-selected="false">YORUMLAR</a>
@@ -69,7 +66,7 @@
                                             <p>Buradan profilinle ilgili tüm bilgilere ulaşabilir ve kontrol edebilirsin!</p>
                                         </div>
                                     </li>
-                                 <div class="tab-pane fade" id="account-orders" role="tabpanel" aria-labelledby="account-orders-tab">
+                                <div class="tab-pane fade" id="account-orders" role="tabpanel" aria-labelledby="account-orders-tab">
                                     <div class="myaccount-orders">
                                         <h4 class="small-title">SİPARİŞLERİM</h4>
                                         <div class="table-responsive">
@@ -80,7 +77,7 @@
                                                         <th>TARİH</th>
                                                         <th>TOPLAM</th>
                                                         <th>DETAY</th>
-                                                        <th>DURUM</th>
+                                                        <th>STATUS</th>
                                                     </tr>
 
                                                 {% for rs in orders %}
@@ -88,9 +85,9 @@
 
                                                     <tr>
                                                         <td><a class="account-order-id" href="javascript:void(0)">{{ rs.id }}</a></td>
-                                                        <td>{{ rs.create_at }}</td>
-                                                        <td>{{ rs.total }}$</td>
-                                                        <td><a href="/user/orderdetail/{{ rs.id }}"  class="uren-btn uren-btn_dark uren-btn_sm" >DETAY</a></td>
+                                                        <td>{{ rs.created_at }}</td>
+                                                        <td>{{ rs.total }}</td>
+                                                        <td><a href="/user/orderdetail/{{ rs.id }}" >DETAY</a></td>
                                                         <td><a  class="uren-btn uren-btn_dark uren-btn_sm"><span>{{ rs.status }}</span></a>
                                                     </tr>
 
