--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -128,58 +128,28 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Hotel News</span>
-                        <h2>Our Blog & Event</h2>
+                        <span>RENT CAR</span>
+                        <h2>HABER & DUYURULAR</h2>
                     </div>
                 </div>
             </div>
+
+
             <div class="row">
+                 {% for rs in news %}
                 <div class="col-lg-4">
-                    <div class="blog-item set-bg" data-setbg="{% static 'img/blog/blog-1.jpg'%}">
+                    <div class="blog-item set-bg" data-setbg="{{rs.image.url}}">
                         <div class="bi-text">
-                            <span class="b-tag">Travel Trip</span>
-                            <h4><a href="#">Tremblant In Canada</a></h4>
-                            <div class="b-time"><i class="icon_clock_alt"></i> 15th April, 2019</div>
+                            <span class="b-tag">RENTCAR</span>
+                            <h4><a href="/content/{{ rs.id }}/{{ rs.slug }}">{{rs.title}}</a></h4>
+                            <div class="b-time"><i class="icon_clock_alt"></i> {{ rs.create_at}}</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="blog-item set-bg" data-setbg="{% static 'img/blog/blog-2.jpg'%}">
-                        <div class="bi-text">
-                            <span class="b-tag">Camping</span>
-                            <h4><a href="#">Choosing A Static Caravan</a></h4>
-                            <div class="b-time"><i class="icon_clock_alt"></i> 15th April, 2019</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="blog-item set-bg" data-setbg="{% static 'img/blog/blog-3.jpg'%}">
-                        <div class="bi-text">
-                            <span class="b-tag">Event</span>
-                            <h4><a href="#">Copper Canyon</a></h4>
-                            <div class="b-time"><i class="icon_clock_alt"></i> 21th April, 2019</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-8">
-                    <div class="blog-item small-size set-bg" data-setbg="{% static 'img/blog/blog-wide.jpg'%}">
-                        <div class="bi-text">
-                            <span class="b-tag">Event</span>
-                            <h4><a href="#">Trip To Iqaluit In Nunavut A Canadian Arctic City</a></h4>
-                            <div class="b-time"><i class="icon_clock_alt"></i> 08th April, 2019</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="blog-item small-size set-bg" data-setbg="{% static 'img/blog/blog-10.jpg'%}">
-                        <div class="bi-text">
-                            <span class="b-tag">Travel</span>
-                            <h4><a href="#">Traveling To Barcelona</a></h4>
-                            <div class="b-time"><i class="icon_clock_alt"></i> 12th April, 2019</div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
+
+
         </div>
     </section>
     <!-- Blog Section End -->
