--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -44,7 +44,7 @@
         <div class="menu-item">
             <div class="container">
                 <div class="row">
-                   <div class="custom-category_col col-3" style="padding-top: 10px">
+                   <div class="custom-category_col col-2" style="padding-top: 10px ; padding-left: 0px">
                             <div class="category-menu category-menu-hidden" >
                                 <div class="category-heading" STYLE="background: #FFFFFF "  >
                                     <h2 class="categories-toggle">
@@ -80,7 +80,7 @@
                         </div>
 
 
-                    <div class="col-lg-9">
+                    <div class="col-lg-10" style="padding-right: 0px">
                         <div class="nav-menu" >
                             <nav class="mainmenu" >
                                 <ul>
@@ -88,6 +88,26 @@
                                     <li><a href="/hakkimizda">Hakkımızda</a></li>
                                     <li><a href="/referanslar">Referanslar</a></li>
                                     <li><a href="/iletisim">İletişim</a></li>
+                                    {% if menu %}
+                                        {% recursetree menu %}
+
+                                        <li><a href="/menu/{{ node.id }}" >{{ node.title }}</a>
+
+                                        {% if not node.is_leaf_node %}
+
+                                        <ul class="dropdown">
+
+                                        <li><a href="#">{{children}}</a></li>
+
+                                    </ul>
+
+                                            {% endif %}
+
+                                    </li>
+
+                                {% endrecursetree %}
+                              {% endif %}
+
                                     <li><a href="" class="fa fa-user"> {% if user.id is not None %}{{ user.first_name }}{% endif %}</a>
                                     <ul class="dropdown">
 
