--- a/home/templates/allcars.html
+++ b/home/templates/allcars.html
@@ -20,7 +20,7 @@
                         <h2 style="color: #FFFFFF">ARABALAR</h2>
                         <div class="bt-option">
                             <a href="./home.html" style="color: #FFFFFF">ANASAYFA</a>
-                            <span style="color: #FFFFFF">{{ categorydata.title }}</span>
+                            <span style="color: #FFFFFF">ARABALAR</span>
                         </div>
                     </div>
                 </div>
