--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -10,17 +10,17 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <ul class="tn-left">
-                            <li><i class="fa fa-phone"></i> (+90) 444 0 35</li>
-                            <li><i class="fa fa-envelope"></i> ocokyilmaz@gmail.com</li>
+                            <li><i class="fa fa-phone"></i>{{setting.phone}}</li>
+                            <li><i class="fa fa-envelope"></i> {{setting.email}}</li>
                         </ul>
                     </div>
                     <div class="col-lg-6">
                         <div class="tn-right">
                             <div class="top-social">
-                                <a href="https://www.facebook.com/oguzhancokyilmaz"><i class="fab fa-facebook"></i></a>
-                                <a href="https://www.twitter.com/ocokyilmaz"><i class="fab fa-twitter"></i></a>
+                                <a href="{{setting.facebook}}"><i class="fab fa-facebook"></i></a>
+                                <a href="{{setting.twitter}}"><i class="fab fa-twitter"></i></a>
                                 <a href="#"><i class="fab fa-tripadvisor"></i></a>
-                                <a href="https://www.instagram.com/oguzhancokyilmaz"><i class="fab fa-instagram"></i></a>
+                                <a href="{{setting.instagram}}"><i class="fab fa-instagram"></i></a>
                             </div>
                              <a class="nav-right search-switch">ARAMA YAP
                                 <i class="icon_search"></i>
