--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -12,30 +12,29 @@
                                     <img src="{% static 'img/footer-logo.png'%}" alt="">
                                 </a>
                             </div>
-                            <p>We inspire and reach millions of travelers<br /> across 90 local websites</p>
+                            <p>Milyonlarca yolcuya ilham veriyor ve ulaşıyoruz<br /> 90 ülkeden fazla ağımız ile birlikte.</p>
                             <div class="fa-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-tripadvisor"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-youtube-play"></i></a>
+                                 <a href="{{setting.facebook}}"><i class="fab fa-facebook"></i></a>
+                                <a href="{{setting.twitter}}"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-tripadvisor"></i></a>
+                                <a href="{{setting.instagram}}"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 offset-lg-1">
                         <div class="ft-contact">
-                            <h6>Contact Us</h6>
+                            <h6>İLETİŞİM</h6>
                             <ul>
-                                <li>(12) 345 67890</li>
-                                <li>info.colorlib@gmail.com</li>
-                                <li>856 Cordia Extension Apt. 356, Lake, United State</li>
+                                <li>{{ setting.phone}}</li>
+                                <li>{{ setting.email}}</li>
+                                <li>{{ setting.adress}}</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-3 offset-lg-1">
                         <div class="ft-newslatter">
-                            <h6>New latest</h6>
-                            <p>Get the latest updates and offers.</p>
+                            <h6>BİLDİRİM AL</h6>
+                            <p>Fiyatlar ve kampanyalar hakkında bildirim alın.</p>
                             <form action="#" class="fn-form">
                                 <input type="text" placeholder="Email">
                                 <button type="submit"><i class="fa fa-send"></i></button>
@@ -50,15 +49,15 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <ul>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Privacy</a></li>
-                            <li><a href="#">Environmental Policy</a></li>
+                            <li><a href="/hakkimizda">HAKKIMIZDA</a></li>
+                            <li><a href="/iletisim">İLETİŞİM</a></li>
+                            <li><a href="/sss">SIKÇA SORULAN SORULAR</a></li>
+
                         </ul>
                     </div>
                     <div class="col-lg-5">
                         <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made by Oğuzhan ÇOKYILMAZ
   </p></div>
                     </div>
                 </div>
