--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -16,7 +16,7 @@
                 <div class="col-xl-4 col-lg-5 offset-xl-2 offset-lg-1">
                     <div class="booking-form">
                         <h3>Aracını Kirala</h3>
-                        <form action="#">
+                        <form action="/allcars">
                             <div class="check-date">
                                 <label for="date-in">Teslim Alış Tarihi:</label>
                                 <input type="text" class="date-input" id="date-in">
@@ -37,8 +37,8 @@
                             <div class="select-option">
                                 <label for="room">Araç:</label>
                                 <select id="room">
-                                    <option value="">Bmw</option>
-                                    <option value="">Mercedes</option>
+                                    <option value="">TÜM ARAÇLAR</option>
+
                                 </select>
                             </div>
                             <button type="submit">Kontrol Et</button>
